Fix button for empty logged in state of Survey page
This was previously overlapping the paragraph content.

--- a/src/icp/apps/beekeepers/sass/06_components/_survey.scss
+++ b/src/icp/apps/beekeepers/sass/06_components/_survey.scss
@@ -44,6 +44,7 @@
     }
 
     &__button {
+        display: inline-block;
         max-width: max-content;
         margin: 2rem 0;
         padding: 15px;
@@ -52,6 +53,7 @@
         text-decoration: none;
         background: $color-primary;
         border: none;
+        border-radius: 5px;
     }
 
     .dropdown__button {
